tests/ui/does-not-have-iter-interpolated.stderr
error[E0308]: mismatched types
 --> $DIR/does-not-have-iter-interpolated.rs:8:5
  |
8 |     quote!(#(#nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^^ expected struct `quote::__rt::HasIterator`, found struct `quote::__rt::ThereIsNoIteratorInRepetition`
  |
  = note: expected type `quote::__rt::HasIterator`
             found type `quote::__rt::ThereIsNoIteratorInRepetition`
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
